fix: 가게 데이터 조회 방식 최적화 및 N+1문제 해결